# SmartGrass

./: LICENSE
Codigo/source-code/: CMakeLists.txt  README.md  sdkconfig
Codigo/source-code/app/: index.html
Codigo/source-code/components/a4988/: CMakeLists.txt  a4988.c
Codigo/source-code/components/a4988/include/: a4988.h
Codigo/source-code/components/ap/: CMakeLists.txt  ap.c
Codigo/source-code/components/ap/include/: ap.h
Codigo/source-code/components/brushless/: CMakeLists.txt  brushless.c
Codigo/source-code/components/brushless/include/: brushless.h
Codigo/source-code/components/i2c/: CMakeLists.txt  i2c.c
Codigo/source-code/components/i2c/include/: i2c.h
Codigo/source-code/components/mks_servo/: CMakeLists.txt  mks_servo.c
Codigo/source-code/components/mks_servo42c/: CMakeLists.txt  mks_servo42c.c
Codigo/source-code/components/mks_servo42c/include/: mks_servo42c.h
Codigo/source-code/components/mpu6050/: CMakeLists.txt  mpu6050.c
Codigo/source-code/components/mpu6050/include/: mpu6050.h
Codigo/source-code/components/server/: CMakeLists.txt  server.c
Codigo/source-code/components/server/include/: server.h
Codigo/source-code/components/soft_ap/: CMakeLists.txt  soft_ap.c
Codigo/source-code/components/soft_ap/include/: soft_ap.h
Codigo/source-code/components/uart/: CMakeLists.txt  uart.c
Codigo/source-code/components/uart/include/: uart.h
Codigo/source-code/components/vehicle/: CMakeLists.txt  vehicle.c
Codigo/source-code/components/vehicle/include/: vehicle.h
Codigo/source-code/components/ws/: CMakeLists.txt  ws.c
Codigo/source-code/components/ws/include/: ws.h
Codigo/source-code/main/: CMakeLists.txt  board_config.h  main.c
Electronica/: Ejemplo electronica.f3z
Mecanica/: Ejemplo mecanico.f3d
